--- a/PROJECT_1_TEXT_CLASSIFICATION_DEPRESSION_DETECTION.ipynb
+++ b/PROJECT_1_TEXT_CLASSIFICATION_DEPRESSION_DETECTION.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1AfMChGKAGypx0jZHb1w8Rk4TKW18_IqJ",
-      "authorship_tag": "ABX9TyP6VH0+9d3G3eU6kLya2+6V",
+      "authorship_tag": "ABX9TyNRS3C4y1p+QaqjbsNlXhje",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
           "height": 71
         },
         "id": "f22i0WcfXOdv",
-        "outputId": "12c45523-2f8a-4eff-f74b-0d15754e13c7"
+        "outputId": "02082f56-c284-423a-ef86-a6a7c5e4ca2d"
       },
       "outputs": [
         {
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "a2a627dc-d99a-413d-c2c8-b07a8961982d"
+        "outputId": "bbf7810c-0f1f-4805-f2cc-337e439a1a0e"
       },
-      "execution_count": 58,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +128,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-94eb44e0-51d5-40fb-9019-52a35a796df1\">\n",
+              "  <div id=\"df-8d93dabc-22bf-498b-8d6b-cb58ddcdbb95\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -236,7 +236,7 @@
               "</table>\n",
               "<p>1790 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-94eb44e0-51d5-40fb-9019-52a35a796df1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d93dabc-22bf-498b-8d6b-cb58ddcdbb95')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -287,12 +287,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-94eb44e0-51d5-40fb-9019-52a35a796df1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8d93dabc-22bf-498b-8d6b-cb58ddcdbb95 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-94eb44e0-51d5-40fb-9019-52a35a796df1');\n",
+              "          const element = document.querySelector('#df-8d93dabc-22bf-498b-8d6b-cb58ddcdbb95');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -315,7 +315,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 2
         }
       ]
     },
@@ -341,9 +341,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zbrKAVxQbBKk",
-        "outputId": "8695f558-9169-4638-9ea6-ea98302bfbb9"
+        "outputId": "88173917-faee-40b3-aec7-fba32038bfa6"
       },
-      "execution_count": 59,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,9 +378,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DrbpeNfqbZZn",
-        "outputId": "d19c5122-a141-4d9c-f1d1-fbcdc8df9b2a"
+        "outputId": "fba775f4-3a67-468a-dd61-f8b875f92125"
       },
-      "execution_count": 60,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,7 +409,7 @@
       "metadata": {
         "id": "3YagIXVaqgCo"
       },
-      "execution_count": 61,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -428,7 +428,7 @@
       "metadata": {
         "id": "tf4ViBifw9lI"
       },
-      "execution_count": 62,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -450,9 +450,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4fe2eb30-36a6-48ed-9d86-8317187ad919"
+        "outputId": "222e6ef0-3931-4b26-8d61-051caf7ae1d8"
       },
-      "execution_count": 63,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +479,7 @@
       "metadata": {
         "id": "mTN-IxkN3KFc"
       },
-      "execution_count": 64,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -509,9 +509,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tRjE5Oy_8iGO",
-        "outputId": "20563e5b-7e61-44ff-ef5f-c3dc2c2dee33"
+        "outputId": "ae4e36a5-2387-4e9a-fa1f-9ac490c02d27"
       },
-      "execution_count": 77,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,26 +529,49 @@
     {
       "cell_type": "code",
       "source": [
-        "len(X_vector),len(y)"
+        "y = np.array(y).reshape(-1,1)\n",
+        "X_vector = np.array(X_vector)\n",
+        "\n",
+        "new_X_vector = []\n",
+        "new_y = []\n",
+        "for i in range(len(y)):\n",
+        "  new_X_vector.append(X_vector[i].reshape(-1,1))\n",
+        "  new_y.append(y[i].reshape(-1,1))\n",
+        "\n",
+        "new_X_vector = np.array(new_X_vector)\n",
+        "new_y = np.array(new_y)"
+      ],
+      "metadata": {
+        "id": "Dxkx0WNI98gz"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# new_X_vector = np.squeeze(new_X_vector)\n",
+        "# new_X_vector[0].shape\n",
+        "new_y.shape,new_y[0].shape,new_X_vector.shape,new_X_vector[0].shape"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Dxkx0WNI98gz",
-        "outputId": "de2bbca3-760b-4581-b0f8-b42badf0059f"
+        "id": "fk2fBcFji6hl",
+        "outputId": "e591576e-a599-40c1-ef59-a6afa56a6be5"
       },
-      "execution_count": 78,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(2565, 2565)"
+              "((2565, 1, 1), (1, 1), (2565, 121, 1), (121, 1))"
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 76
         }
       ]
     },
@@ -557,32 +580,45 @@
       "source": [
         "tf.random.set_seed(666)\n",
         "model1 = tf.keras.Sequential()\n",
-        "model1.add(tf.keras.layers.Dense(1),activation_function=\"relu\")\n",
-        "model1.add(tf.keras.layers.Dense(1),activation_function=\"relu\")\n",
-        "model1.add(tf.keras.layers.Dense(1),activation_function=\"relu\")"
+        "model1.add(tf.keras.layers.Dense(1,activation=\"relu\"))\n",
+        "model1.add(tf.keras.layers.Dense(1,activation=\"relu\"))\n",
+        "model1.add(tf.keras.layers.Dense(1,activation=\"relu\"))\n",
+        "model1.add(tf.keras.layers.Dense(2,activation=\"sigmoid\"))\n",
+        "\n",
+        "model1.compile(loss=tf.keras.losses.binary_focal_crossentropy,\n",
+        "               optimizer=tf.keras.optimizers.Adam(),\n",
+        "               metrics=[\"accuracy\"])\n",
+        "\n",
+        "model1.fit(X_vector,y,epochs=5)"
       ],
       "metadata": {
         "id": "7bq22Qhmy3Fm",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 382
+          "height": 799
         },
-        "outputId": "685edfe2-f546-4a93-b437-d8522a2a6928"
+        "outputId": "c7aee5c2-50b7-4b94-d8e0-f65bf9b91ffa"
       },
-      "execution_count": null,
+      "execution_count": 77,
       "outputs": [
         {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n"
+          ]
+        },
+        {
           "output_type": "error",
-          "ename": "TypeError",
+          "ename": "ValueError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-7adf5a2e9952>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_seed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m666\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmodel1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmodel1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mactivation_function\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"relu\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mmodel1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mactivation_function\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"relu\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mactivation_function\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"relu\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/training/tracking/base.py\u001b[0m in \u001b[0;36m_method_wrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    627\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_self_setattr_tracking\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    628\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 629\u001b[0;31m       \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    630\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    631\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_self_setattr_tracking\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprevious_value\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-77-2e241b398337>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m                metrics=[\"accuracy\"])\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mmodel1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_vector\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint: disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m       \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint: disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: add() got an unexpected keyword argument 'activation_function'"
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/func_graph.py\u001b[0m in \u001b[0;36mautograph_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m   1145\u001b[0m           \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint:disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1146\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ag_error_metadata\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1147\u001b[0;31m               \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mag_error_metadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1148\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1149\u001b[0m               \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: in user code:\n\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1021, in train_function  *\n        return step_function(self, iterator)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1010, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1000, in run_step  **\n        outputs = model.train_step(data)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 860, in train_step\n        loss = self.compute_loss(x, y, y_pred, sample_weight)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 919, in compute_loss\n        y, y_pred, sample_weight, regularization_losses=self.losses)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/compile_utils.py\", line 201, in __call__\n        loss_value = loss_obj(y_t, y_p, sample_weight=sw)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/losses.py\", line 141, in __call__\n        losses = call_fn(y_true, y_pred)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/losses.py\", line 245, in call  **\n        return ag_fn(y_true, y_pred, **self._fn_kwargs)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/losses.py\", line 2033, in binary_focal_crossentropy\n        from_logits=from_logits,\n    File \"/usr/local/lib/python3.7/dist-packages/keras/backend.py\", line 5310, in binary_focal_crossentropy\n        from_logits=from_logits,\n    File \"/usr/local/lib/python3.7/dist-packages/keras/backend.py\", line 5247, in binary_crossentropy\n        return tf.nn.sigmoid_cross_entropy_with_logits(labels=target, logits=output)\n\n    ValueError: `logits` and `labels` must have the same shape, received ((None, 2) vs (None, 1)).\n"
           ]
         }
       ]
