--- a/PROJECT_1_TEXT_CLASSIFICATION_DEPRESSION_DETECTION.ipynb
+++ b/PROJECT_1_TEXT_CLASSIFICATION_DEPRESSION_DETECTION.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1AfMChGKAGypx0jZHb1w8Rk4TKW18_IqJ",
-      "authorship_tag": "ABX9TyNRS3C4y1p+QaqjbsNlXhje",
+      "authorship_tag": "ABX9TyPlrF/BTK/T8bddNJQoxlxH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,14 +31,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
         "id": "f22i0WcfXOdv",
-        "outputId": "02082f56-c284-423a-ef86-a6a7c5e4ca2d"
+        "outputId": "aa68f317-d673-4949-a86f-2cc9d789827a"
       },
       "outputs": [
         {
@@ -60,7 +60,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "bbf7810c-0f1f-4805-f2cc-337e439a1a0e"
+        "outputId": "675fea3a-d8f3-4a9a-97f9-e3d424919d1d"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +128,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8d93dabc-22bf-498b-8d6b-cb58ddcdbb95\">\n",
+              "  <div id=\"df-dc66f9fb-9256-4a7e-9cf0-62c7855055c6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -236,7 +236,7 @@
               "</table>\n",
               "<p>1790 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d93dabc-22bf-498b-8d6b-cb58ddcdbb95')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc66f9fb-9256-4a7e-9cf0-62c7855055c6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -287,12 +287,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8d93dabc-22bf-498b-8d6b-cb58ddcdbb95 button.colab-df-convert');\n",
+              "          document.querySelector('#df-dc66f9fb-9256-4a7e-9cf0-62c7855055c6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8d93dabc-22bf-498b-8d6b-cb58ddcdbb95');\n",
+              "          const element = document.querySelector('#df-dc66f9fb-9256-4a7e-9cf0-62c7855055c6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -315,7 +315,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -341,9 +341,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zbrKAVxQbBKk",
-        "outputId": "88173917-faee-40b3-aec7-fba32038bfa6"
+        "outputId": "83efdfe4-a38d-41a4-d8f8-14f3c42f51fe"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,9 +378,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DrbpeNfqbZZn",
-        "outputId": "fba775f4-3a67-468a-dd61-f8b875f92125"
+        "outputId": "239f1899-b398-43c9-defb-ac0209892388"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,7 +409,7 @@
       "metadata": {
         "id": "3YagIXVaqgCo"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -428,7 +428,7 @@
       "metadata": {
         "id": "tf4ViBifw9lI"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -450,9 +450,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "222e6ef0-3931-4b26-8d61-051caf7ae1d8"
+        "outputId": "42003cad-4472-4ba3-b70b-61481ee1c2e9"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +479,7 @@
       "metadata": {
         "id": "mTN-IxkN3KFc"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -509,9 +509,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tRjE5Oy_8iGO",
-        "outputId": "ae4e36a5-2387-4e9a-fa1f-9ac490c02d27"
+        "outputId": "5d8fa77a-7c38-4259-ad11-020ccc1c05a5"
       },
-      "execution_count": 9,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,97 +529,79 @@
     {
       "cell_type": "code",
       "source": [
-        "y = np.array(y).reshape(-1,1)\n",
-        "X_vector = np.array(X_vector)\n",
+        "X_vector = np.array(X_vector).astype(\"float32\")\n",
+        "y = np.array(y).astype(\"float32\")\n",
         "\n",
-        "new_X_vector = []\n",
-        "new_y = []\n",
-        "for i in range(len(y)):\n",
-        "  new_X_vector.append(X_vector[i].reshape(-1,1))\n",
-        "  new_y.append(y[i].reshape(-1,1))\n",
-        "\n",
-        "new_X_vector = np.array(new_X_vector)\n",
-        "new_y = np.array(new_y)"
+        "X_vector.shape,y.shape\n",
+        "y = pd.get_dummies(y)"
       ],
       "metadata": {
         "id": "Dxkx0WNI98gz"
       },
-      "execution_count": 75,
+      "execution_count": 38,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# new_X_vector = np.squeeze(new_X_vector)\n",
-        "# new_X_vector[0].shape\n",
-        "new_y.shape,new_y[0].shape,new_X_vector.shape,new_X_vector[0].shape"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fk2fBcFji6hl",
-        "outputId": "e591576e-a599-40c1-ef59-a6afa56a6be5"
-      },
-      "execution_count": 76,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "((2565, 1, 1), (1, 1), (2565, 121, 1), (121, 1))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 76
-        }
-      ]
     },
     {
       "cell_type": "code",
       "source": [
         "tf.random.set_seed(666)\n",
         "model1 = tf.keras.Sequential()\n",
-        "model1.add(tf.keras.layers.Dense(1,activation=\"relu\"))\n",
-        "model1.add(tf.keras.layers.Dense(1,activation=\"relu\"))\n",
-        "model1.add(tf.keras.layers.Dense(1,activation=\"relu\"))\n",
+        "model1.add(tf.keras.layers.Dense(128,activation=\"relu\"))\n",
+        "model1.add(tf.keras.layers.Dense(64,activation=\"relu\"))\n",
+        "model1.add(tf.keras.layers.Dense(32,activation=\"relu\"))\n",
+        "model1.add(tf.keras.layers.Dense(16,activation=\"relu\"))\n",
+        "model1.add(tf.keras.layers.Dense(8,activation=\"relu\"))\n",
+        "model1.add(tf.keras.layers.Dense(4,activation=\"relu\"))\n",
         "model1.add(tf.keras.layers.Dense(2,activation=\"sigmoid\"))\n",
         "\n",
-        "model1.compile(loss=tf.keras.losses.binary_focal_crossentropy,\n",
+        "model1.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
         "               optimizer=tf.keras.optimizers.Adam(),\n",
         "               metrics=[\"accuracy\"])\n",
         "\n",
-        "model1.fit(X_vector,y,epochs=5)"
+        "model1.fit(X_vector,y,epochs=100)"
       ],
       "metadata": {
-        "id": "7bq22Qhmy3Fm",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 799
-        },
-        "outputId": "c7aee5c2-50b7-4b94-d8e0-f65bf9b91ffa"
+        "id": "7bq22Qhmy3Fm"
       },
-      "execution_count": 77,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_vector[np.random.choice(len(X_vector))]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ehe0YrgsjgIf",
+        "outputId": "91cae68b-a5ef-4677-8897-a10f5633c900"
+      },
+      "execution_count": 71,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/5\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-77-2e241b398337>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m                metrics=[\"accuracy\"])\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mmodel1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_vector\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint: disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m       \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/func_graph.py\u001b[0m in \u001b[0;36mautograph_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m   1145\u001b[0m           \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint:disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1146\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ag_error_metadata\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1147\u001b[0;31m               \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mag_error_metadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1148\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1149\u001b[0m               \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: in user code:\n\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1021, in train_function  *\n        return step_function(self, iterator)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1010, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1000, in run_step  **\n        outputs = model.train_step(data)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 860, in train_step\n        loss = self.compute_loss(x, y, y_pred, sample_weight)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 919, in compute_loss\n        y, y_pred, sample_weight, regularization_losses=self.losses)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/compile_utils.py\", line 201, in __call__\n        loss_value = loss_obj(y_t, y_p, sample_weight=sw)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/losses.py\", line 141, in __call__\n        losses = call_fn(y_true, y_pred)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/losses.py\", line 245, in call  **\n        return ag_fn(y_true, y_pred, **self._fn_kwargs)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/losses.py\", line 2033, in binary_focal_crossentropy\n        from_logits=from_logits,\n    File \"/usr/local/lib/python3.7/dist-packages/keras/backend.py\", line 5310, in binary_focal_crossentropy\n        from_logits=from_logits,\n    File \"/usr/local/lib/python3.7/dist-packages/keras/backend.py\", line 5247, in binary_crossentropy\n        return tf.nn.sigmoid_cross_entropy_with_logits(labels=target, logits=output)\n\n    ValueError: `logits` and `labels` must have the same shape, received ((None, 2) vs (None, 1)).\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([   0., 2135.,    0., 3482., 2768.,    0.,    0., 1699.,    0.,\n",
+              "        918.,    0.,    0.,    0., 1183.,    0., 3840.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
+              "          0.,    0.,    0.,    0.], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
         }
       ]
     },
@@ -629,10 +611,25 @@
         ""
       ],
       "metadata": {
-        "id": "KJwlgddabDpx"
+        "id": "KJwlgddabDpx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a435afcd-6152-437b-db43-dca21ce7d66e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1521"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
     }
   ]
 }
